Software Webrender is broken on arm64 windows
Categories
(Core :: Graphics: WebRender, defect)
Tracking
()
Tracking | Status | |
---|---|---|
firefox86 | --- | fixed |
People
(Reporter: glandium, Assigned: aosmond)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
Since a few nightlies, it appears Webrender is enabled, but for some reason I only get software webrender on the Yoga C630 (arm64 windows).
The result is that depending on the font, text doesn't appear ; on the toolbar, buttons don't hilight ; and rendering is weird in some cases on some sites.
Forcing hardware webrender, or disabling webrender fixes it.
Forcing software webrender on older versions that don't enable webrender by default (like current devedition) also triggers the problem.
Updated•4 years ago
|
Comment 1•4 years ago
|
||
Presumably mozregression would only point to the commit which enabled software webrender on your configuration, rather than commit which caused the broken rendering (if there even is one)? Does running mozregression with gfx.webrender.software:true
find anything useful?
Updated•4 years ago
|
Comment 2•4 years ago
|
||
Andrew, do we need to block this config on nightly?
Assignee | ||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
Assignee | ||
Updated•4 years ago
|
Reporter | ||
Comment 4•4 years ago
|
||
Unfortunately, mozregression doesn't work on arm64 windows. It would need to be manual. I guess I could check the first build that had software webrender at all?
Reporter | ||
Comment 6•4 years ago
|
||
For the record, I can totally reproduce on arm64 mac too if I force software webrender.
Comment 7•4 years ago
|
||
bugherder |
Updated•4 years ago
|
Description
•