Bug 1682715 - Only allow Software WebRender by default on x86/AMD64 targets. r=jrmuizel

Differential Revision: https://phabricator.services.mozilla.com/D99937